# libfabric-efa-rs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  wrapper.c  wrapper.h
examples/: benchmark.rs  pingpong.rs
src/: lib.rs
